--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-    "name": "backcotoapp",
-    "version": "1.0.0",
-    "description": "this repo builds the back of cotoapp",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon index.js",
-        "start": "node index.js"
-    },
-    "keywords": [
-        "nodejs",
-        "backend"
-    ],
-    "author": "@zzinue",
-    "license": "MIT",
-    "dependencies": {
-        "bcrypt": "^5.0.1",
-        "dotenv": "^16.0.1",
-        "express": "^4.18.1",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.3.4"
-    }
+  "name": "backcotoapp",
+  "version": "1.0.0",
+  "description": "this repo builds the back of cotoapp",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "keywords": [
+    "nodejs",
+    "backend"
+  ],
+  "author": "@zzinue",
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
