--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "author": "@zzinue",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1184.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "image-to-base64": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
